testdata/golden/sema/valid/compare_stmt_all_return_finally.fmt
// scenario: statement-level compare with finally closes control flow
fn classify(flag: bool) -> int {
    compare flag {
        true => {
            return 1;
        }
        finally => {
            return 0;
        }
    };
}
